Fixed column spacing

--- a/sass/css/common.scss
+++ b/sass/css/common.scss
@@ -24,6 +24,10 @@
     padding-top: 10px;
 }
 
+.padding-10 {
+    padding: 10px !important;
+}
+
 .pointer {
     cursor: pointer;
 }
